--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
     <div class="section">
-      <h1>Hello!<br> I'm Sarah Ha</h1>
+      <h1>Hello!<br> My name is Nayoung Sarah Ha</h1>
     </div>
     <br>
     <br>
