--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <br>
     <div class="section">
-      <!-- <img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"> -->
+      <!-- <img id= "logo" src = "SarahHa.png" alt = "CanvasStudioLogo"> -->
       <ul>
         <li class="menu"><a href="#">Home</a></li>
         <li class="menu"><a href="About.html">About</a></li>
