--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
     <div class="section">
-      <h1>Hello!<br> I am Nayoung Sarah Ha</h1>
+      <h1>Hello!<br> My name is <br> Nayoung Sarah Ha</h1>
       <h2>Scroll down</h2>
     </div>
     <br>
