--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>Sarah Ha</title>
-  <link rel="icon" href="canvas.png" type="image/icon type">
   <link rel="stylesheet" type="text/css" href="home.css">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap"
     rel="stylesheet">
@@ -11,30 +10,37 @@
 
 <body>
   <div class="container">
-
     <div class="section">
-      <h1>Hello!<br> My name is <br> Nayoung Sarah Ha</h1>
-      <h2>Scroll down</h2>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="section">
-      <!-- <img id= "logo" src = "SarahHa.png" alt = "CanvasStudioLogo"> -->
       <ul>
-        <li class="menu"><a href="#">Home</a></li>
-        <li class="menu"><a href="About.html">About</a></li>
-        <li class="menu"><a href="Projects.html">Projects</a></li>
+        <li class="menu"><a href="index.html">About</a></li>
+        <li class="menu"><a href="Research_and_Projects.html">Research and Projects</a></li>
+        <li class="menu"><a href="Teaching.html">Teaching Experience</a></li>
+        <li class="menu"><a href="Drawings.html">Drawings</a></li>
         <li class="menu"><a href="Resume.html">Resume</a></li>
       </ul>
-      <img src="homeimage.png" alt="homeimage">
-    </div>
-    <div class="section">
-      <p>I am currently a sophomore majoring in Computer Science at Cornell University. Click on Projects to look
-        through the projects that I am working on!</p>
-
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <img src="SarahHa.png" alt="homeimage">
+  <div id="paragraph">
+    <p>Hello! My name is <b>Nayoung Sarah Ha</b>. I am currently a sophomore majoring in <b>Computer Science</b>
+      at
+      <b>Cornell
+        University</b> and my major interests are <b>Robotics</b> and <b>Computer Graphics</b>. Click on
+      Projects to look
+      through the projects that I am working on!
+    </p>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
 </body>
 
 </html>
