--- a/Drawing.html
+++ b/Drawing.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>Sarah Ha</title>
-  <link rel="stylesheet" type="text/css" href="home.css">
+  <title>Teaching Experience</title>
+  <link rel="stylesheet" type="text/css" href="Drawing.css">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap"
     rel="stylesheet">
 </head>
@@ -24,16 +24,24 @@
   <br>
   <br>
   <br>
-  <img src="SarahHa.png" alt="homeimage">
-  <div id="paragraph">
-    <p>Hello! My name is <b>Nayoung Sarah Ha</b>. I am currently a sophomore majoring in <b>Computer Science</b>
-      at
-      <b>Cornell
-        University</b> and my major interests are <b>Robotics</b> and <b>Computer Graphics</b>. Click on
-      Projects to look
-      through the projects that I am working on!
-    </p>
+  <div id="box">
+    <p>Outside of academics, I like to draw digitally using Paint Tool SAI tool and Photoshop CS6</p>
   </div>
+  <br>
+  <img src="drawing7.jpeg">
+  <img src="drawing1.jpeg">
+  <img src="drawing9.jpeg">
+  <img src="drawing8.jpeg">
+  <img src="drawing5.jpeg">
+
+  <img src="drawing10.jpeg">
+  <img src="drawing2.jpeg">
+  <img src="drawing3.jpeg">
+  <img src="drawing4.jpeg">
+
+  <img src="drawing6.jpeg">
+
+
   <br>
   <br>
   <br>
