--- a/Research_and_Projects.html
+++ b/Research_and_Projects.html
@@ -15,7 +15,7 @@
         <li class="menu"><a href="index.html">About</a></li>
         <li class="menu"><a href="Research_and_Projects.html">Research and Projects</a></li>
         <li class="menu"><a href="Teaching.html">Teaching Experience</a></li>
-        <li class="menu"><a href="Drawings.html">Drawings</a></li>
+        <li class="menu"><a href="Drawing.html">Drawings</a></li>
         <li class="menu"><a href="Resume.html">Resume</a></li>
       </ul>
     </div>
@@ -29,15 +29,17 @@
       <h1> EmPRISE Lab Undergraduate Research Assistant</h1>
       <img src="emprise-logo.png">
     </a>
-    <ul>
-      <li>Currently a part of the Unity development and testing of <br><a
-          href=https://emprise.cs.cornell.edu/rcareworld><b>RCareWorld</b> </a>, a human-centric simulation
-        world
-        for physical <br>
-        and
-        social
-        robotic caregiving</li>
-    </ul>
+    <div id="info">
+      <ul>
+        <li>Currently a part of the Unity development and testing of <br><a
+            href=https://emprise.cs.cornell.edu/rcareworld><b>RCareWorld</b> </a>, a human-centric simulation
+          world
+          for physical <br>
+          and
+          social
+          robotic caregiving</li>
+      </ul>
+    </div>
   </div>
   <br>
   <br>
@@ -48,21 +50,30 @@
       <h1>Cornell University Autonomous Underwater Vehicle (CUAUV) Software Team</h1>
       <img src="cuauv-logo.png">
     </a>
+    <div id="info">
+      <ul>
+        <li>Finalist in Robonation's 2022 International Robosub competition, placing 6th out of 40 international
+          teams
+        </li>
+        <br>
+        <li>Programmed vision modules that identifies simple colored mission elements and 2D image mission elements
+          using
+          lab color space, filtering process, and image matching algorithms such as Scale-Invariant Feature Transform,
+          Speed Up Robust Feature, and Oriented FAST and Rotated BRIEF technique.</li>
+        <br>
+        <li>Created mission modules that enables autonomous buoy searching, centering, ramming, and torpedo shooting
+          tasks
+        </li>
+        <br>
+        <li>Developed a protocol to send over obj files and configuration files from stack and render objects in the
+          unity
+          simulator with WebSocket++</li>
+        <li>Currently working on automated tests for mission simulations
+      </ul>
+    </div>
     <div id="img2">
       <img src="diagram.png">
     </div>
-    <ul>
-      <li>Finalist in Robonation's 2022 International Robosub competition, placing 6th out of 40 international teams
-      </li>
-      <li>Programmed vision modules that identifies simple colored mission elements and 2D image mission elements using
-        lab color space, filtering process, and image matching algorithms such as Scale-Invariant Feature Transform,
-        Speed Up Robust Feature, and Oriented FAST and Rotated BRIEF technique.</li>
-      <li>Created mission modules that enables autonomous buoy searching, centering, ramming, and torpedo shooting tasks
-      </li>
-      <li>Developed a protocol to send over obj files and configuration files from stack and render objects in the unity
-        simulator with WebSocket++</li>
-      <li>Currently working on automated tests for mission simulations
-    </ul>
   </div>
   <br>
   <br>
@@ -72,19 +83,22 @@
         <h1>Big Care AI Lab</h1>
       </a>
       <img src="bigcare.png">
-      <li>
-        Developed a food recommendation system considering ingredient preference and individual health factors for
-        health care app company advised under Professor Song Min
-      </li>
-      <li>
-        Presented patent for food recommendation system regarding user preference using graph algorithms and matrix
-        factorization to patent attorney
-      </li>
-      <li>
-        Engaged in data analysis of nutrition factors and food consumption pattern of individuals using Pandas DataFrame
-        and Scipy
-      </li>
+      <div id="info">
+        <li>
+          Developed a food recommendation system considering ingredient preference and individual health factors for
+          health care app company advised under Professor Song Min
+        </li>
+        <li>
+          Presented patent for food recommendation system regarding user preference using graph algorithms and matrix
+          factorization to patent attorney
+        </li>
+        <li>
+          Engaged in data analysis of nutrition factors and food consumption pattern of individuals using Pandas
+          DataFrame
+          and Scipy
+        </li>
     </ul>
+  </div>
   </div>
   <br>
   <br>
