--- a/Teaching.html
+++ b/Teaching.html
@@ -15,7 +15,7 @@
         <li class="menu"><a href="index.html">About</a></li>
         <li class="menu"><a href="Research_and_Projects.html">Research and Projects</a></li>
         <li class="menu"><a href="Teaching.html">Teaching Experience</a></li>
-        <li class="menu"><a href="Drawings.html">Drawings</a></li>
+        <li class="menu"><a href="Drawing.html">Drawings</a></li>
         <li class="menu"><a href="Resume.html">Resume</a></li>
       </ul>
     </div>
