--- a/Teaching.html
+++ b/Teaching.html
@@ -27,7 +27,7 @@
   <div id="box">
     <h1> Teaching Assistant / Consultant at Cornell</h1>
     <ul>
-      <li>CS 4820 Introduction to Algorithms Teaching Assistant - FA23</li>
+      <li>CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</li>
       <li>CS 2110 Object Oriented Programming and Data Structures Consultant - SP23</li>
     </ul>
   </div>
