--- a/Teaching.html
+++ b/Teaching.html
@@ -35,7 +35,8 @@
   <div id="box">
     <h1>Code Red Robotics Outreach Event</h1>
     <ul>
-      <li>Hosted a booth in an outreach event at Ithaca High School <br> to expose the interest in Robotics to our local
+      <li>Hosted a booth about CUAUV in an outreach event at Ithaca High School <br> to expose the interest in Robotics
+        to our local
         community</li>
     </ul>
   </div>
