--- a/Teaching.html
+++ b/Teaching.html
@@ -28,7 +28,15 @@
     <h1> Teaching Assistant / Consultant at Cornell</h1>
     <ul>
       <li>CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</li>
+        <ul>
+          <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.</li>
+          <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
+        </ul>
       <li>CS 2110 Object Oriented Programming and Data Structures Consultant - SP23</li>
+        <ul>
+          <li>Responsible for holding office hours, assisting discussion sections, answering Ed discussion questions, and grading assignments and exams.</li>
+          <li>Topics including Java syntax, Abstraction, Encapsulation,  Testing, Interfaces, Inheritance, Dynamic dispatch, Exceptions, Bags, Generics Reading, Linked Structures, Ordered Collections, Efficiency, Recursion, Trees, Sorting, Hashing, GUIs, Concurrency, Synchronization, BFS, DFS, Dijkstra's Algorithm, Priority queues and heaps, and Iterators</li>
+        </ul>
     </ul>
   </div>
   <br>
