--- a/Teaching.html
+++ b/Teaching.html
@@ -25,18 +25,32 @@
   <br>
   <br>
   <div id="box">
-    <h1> Teaching Assistant / Consultant at Cornell</h1>
+    <h1> CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</h1>
     <ul>
-      <li>CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</li>
-        <ul>
-          <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.</li>
-          <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
-        </ul>
-      <li>CS 2110 Object Oriented Programming and Data Structures Consultant - SP23</li>
-        <ul>
-          <li>Responsible for holding office hours, assisting discussion sections, answering Ed discussion questions, and grading assignments and exams.</li>
-          <li>Topics including Java syntax, Abstraction, Encapsulation,  Testing, Interfaces, Inheritance, Dynamic dispatch, Exceptions, Bags, Generics Reading, Linked Structures, Ordered Collections, Efficiency, Recursion, Trees, Sorting, Hashing, GUIs, Concurrency, Synchronization, BFS, DFS, Dijkstra's Algorithm, Priority queues and heaps, and Iterators</li>
-        </ul>
+      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.
+      </li>
+      <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network
+        Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
+    </ul>
+  </div>
+  <br>
+  <div id="box">
+    <h1> CS 2110 Object Oriented Programming and Data Structures Consultant - SP23</h1>
+    <ul>
+      <li>Responsible for holding office hours, assisting discussion sections, answering Ed discussion questions, and
+        grading assignments and exams.</li>
+      <li>Topics including Java syntax, Abstraction, Encapsulation, Testing, Interfaces, Inheritance, Dynamic dispatch,
+        Exceptions, Bags, Generics Reading, Linked Structures, Ordered Collections, Efficiency, Recursion, Trees,
+        Sorting, Hashing, GUIs, Concurrency, Synchronization, BFS, DFS, Dijkstra's Algorithm, Priority queues and heaps,
+        and Iterators</li>
+    </ul>
+  </div>
+  <br>
+  <div id="box">
+    <h1>SoNIC Workshop Teaching Assistant</h1>
+    <ul>
+      <li>Teaching assistant for SoNIC Workshop, a crash course in robotics with nearly 30 other U.S. students, hosted
+        by the Cornell Ann S. Bowers College of Computing and Information Science.</li>
     </ul>
   </div>
   <br>
