--- a/Teaching.html
+++ b/Teaching.html
@@ -27,8 +27,7 @@
   <div id="box">
     <h1> CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</h1>
     <ul>
-      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.
-      </li>
+      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.</li>
       <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network
         Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
     </ul>
@@ -42,7 +41,7 @@
       <li>Topics including Java syntax, Abstraction, Encapsulation, Testing, Interfaces, Inheritance, Dynamic dispatch,
         Exceptions, Bags, Generics Reading, Linked Structures, Ordered Collections, Efficiency, Recursion, Trees,
         Sorting, Hashing, GUIs, Concurrency, Synchronization, BFS, DFS, Dijkstra's Algorithm, Priority queues and heaps,
-        and Iterators</li>
+        and Iterators.</li>
     </ul>
   </div>
   <br>
