update boxes and links

--- a/Research_and_Projects.html
+++ b/Research_and_Projects.html
@@ -25,14 +25,16 @@
   <br>
   <br>
   <div id="box">
-    <a href=https://emprise.cs.cornell.edu>
-      <h1> EmPRISE Lab Undergraduate Research Assistant</h1>
-      <img src="emprise-logo.png">
-    </a>
+
+    <h1><a href=https://emprise.cs.cornell.edu class="button">
+        EmPRISE Lab</a> Undergraduate Research Assistant</h1>
+    <img src="emprise-logo.png">
+
     <div id="info">
       <ul>
         <li>Currently a part of the Unity development and testing of <br><a
-            href=https://emprise.cs.cornell.edu/rcareworld><b>RCareWorld</b> </a>, a human-centric simulation
+            href=https://emprise.cs.cornell.edu/rcareworld class="button">RCareWorld</a>, a human-centric
+          simulation
           world
           for physical <br>
           and
@@ -46,13 +48,16 @@
   <br>
   <br>
   <div id="box">
-    <a href="https://cuauv.org/">
-      <h1>Cornell University Autonomous Underwater Vehicle (CUAUV) Software Team</h1>
-      <img src="cuauv-logo.png">
-    </a>
+
+    <h1><a href="https://cuauv.org/" class="button">Cornell University Autonomous Underwater Vehicle (CUAUV)</a>
+      Software
+      Team</h1>
+    <img src="cuauv-logo.png">
+
     <div id="info">
       <ul>
-        <li>Finalist in Robonation's 2022 International Robosub competition, placing 6th out of 40 international
+        <li><a href=https://robosub.org/2022/08/04/robosub-2022-final-standings class="button">Finalist in Robonation's
+            2022 International Robosub competition</a>, placing 6th out of 40 international
           teams
         </li>
         <br>
@@ -79,9 +84,9 @@
   <br>
   <div id="box">
     <ul>
-      <a href="https://www.bigcare.co.kr/">
-        <h1>Big Care AI Lab</h1>
-      </a>
+
+      <h1><a href="https://www.bigcare.co.kr/" class="button">Big Care</a> AI Lab</h1>
+
       <img src="bigcare.png">
       <div id="info">
         <li>
