--- a/Teaching.html
+++ b/Teaching.html
@@ -27,7 +27,8 @@
   <div id="box">
     <h1> CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</h1>
     <ul>
-      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.</li>
+      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.
+      </li>
       <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network
         Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
     </ul>
@@ -46,10 +47,10 @@
   </div>
   <br>
   <div id="box">
-    <h1>SoNIC Workshop Teaching Assistant</h1>
+    <h1><a href=https://emprise.cs.cornell.edu/outreach/sonic class=button>SoNIC</a> Workshop Teaching Assistant</h1>
     <ul>
       <li>Teaching assistant for SoNIC Workshop, a crash course in robotics with nearly 30 other U.S. students, hosted
-        by the Cornell Ann S. Bowers College of Computing and Information Science.</li>
+        by the Cornell Ann S. Bowers College of Computing and Information Science and funded by NSF.</li>
     </ul>
   </div>
   <br>
