--- a/Teaching.html
+++ b/Teaching.html
@@ -25,17 +25,22 @@
   <br>
   <br>
   <div id="box">
-    <h1> CS 4820 Introduction to Analysis of Algorithms Teaching Assistant - FA23</h1>
+    <h1> <a href=https://classes.cornell.edu/browse/roster/FA23/class/CS/4820 class=button>
+        CS 4820</a> Introduction to Analysis of Algorithms Teaching Assistant - FA23</h1>
     <ul>
-      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and exams.
+      <li>Responsible for holding office hours, answering Ed discussion questions, and grading assignments and
+        exams.
       </li>
-      <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer, Network
-        Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and Computability.</li>
+      <li>Topics including Gale-Shapley Algorithm, Greedy Algorithm, Dynamic Programming, Divide and Conquer,
+        Network
+        Flows, NP-completeness, Approximation Algorithms, Randomized Algorithms, Turing Machine, and
+        Computability.</li>
     </ul>
   </div>
   <br>
   <div id="box">
-    <h1> CS 2110 Object Oriented Programming and Data Structures Consultant - SP23</h1>
+    <h1> <a href=https://classes.cornell.edu/browse/roster/SP23/class/CS/2110 class=button>CS 2110</a> Object Oriented
+      Programming and Data Structures Consultant - SP23</h1>
     <ul>
       <li>Responsible for holding office hours, assisting discussion sections, answering Ed discussion questions, and
         grading assignments and exams.</li>
@@ -55,7 +60,7 @@
   </div>
   <br>
   <div id="box">
-    <h1>Code Red Robotics Outreach Event</h1>
+    <h1><a href=https://cuauv.org/outreach/events class=button>CUAUV Outreach Event</a></h1>
     <ul>
       <li>Hosted a booth about CUAUV in an outreach event at Ithaca High School <br> to expose the interest in Robotics
         to our local
@@ -65,7 +70,11 @@
   <br>
   <div id="box">
     <ul>
-      <h1>Tutor at Campbell Academy, Luhak Academy, Rivera Academy</h1>
+      <h1>Tutor at <a href=http://www.campbellsec.com/SETF/main.asp class="button">Campbell Academy</a>, <a
+          href=https://luhak.com/?ckattempt=1 class="button">Luhak Academy</a>, <a
+          href=http://www.reveraacademy.com/default class="button">Rivera
+          Academy</a>
+      </h1>
       <li>
         Tutored over 15 students for AP Calculus BC, AP Computer Science,
         <br> AP Physics 1, SAT Math exams and classes and
