--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <br>
   <img src="SarahHa.png" alt="homeimage">
   <div id="paragraph">
-    <p>Hello! My name is <b>Nayoung Sarah Ha</b>. I am currently a sophomore majoring in <b>Computer Science</b>
+    <p>Hello! My name is <b>Nayoung Sarah Ha</b>. I am currently a junior majoring in <b>Computer Science</b>
       at
-      <b>Cornell
-        University</b> and my major interests are <b>Robotics</b> and <b>Computer Graphics</b>. Click on
+      <b><a href=https://www.cornell.edu class=button>Cornell
+          University</a></b> and my major interests are <b>Robotics</b> and <b>Computer Graphics</b>. Click on
       Projects to look
       through the projects that I am working on!
     </p>
