--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <br>
   <br>
   <br>
-  <img src="SarahHa.png" alt="homeimage">
+  <img src="SarahHa.jpeg" alt="homeimage">
   <div id="paragraph">
     <p>Hello! My name is <b>Nayoung Sarah Ha</b>. I am currently a junior majoring in <b>Computer Science</b>
       at
